Bug 734517 - Fix barriering of funName in InitExnPrivate; r=billm

InitExnPrivate needs to trigger barriers when copying out to the heap, but not
when copying data into the on-stack vector.